Refactor Main class for GUI and encryption handling